# szakdoga

./: README.md  conanfile.py  meson.build
app/: main.cpp  meson.build
app/assets/: cone_precompute.comp  cone_tracer.comp  cone_tracer_final_stage.comp  naive_sphere_tracing.comp  ray.include  renderer.include  sdf.include  sdf_car.include  sdf_newtons_cradle.include  sdf_primitives.include  sdf_temple.include  sphere_tracer.comp  tracers.include  tracing_result.include  value.include
app/core/: meson.build
app/core/include/: App.hpp  Camera.hpp  CameraManipulator.hpp  CompShader.hpp  Framebuffer.hpp  SDL_GLDebugMessageCallback.h  Skybox.hpp  Texture2D.hpp
app/core/src/: App.cpp  Camera.cpp  CameraManipulator.cpp  CompShader.cpp  Framebuffer.cpp  SDL_GLDebugMessageCallback.cpp  Skybox.cpp  Texture2D.cpp
app/core/tests/: meson.build
app/core/tests/assets/: test.comp  test_1.include  test_2.include
app/core/tests/include/: Context.hpp
app/core/tests/src/: CompShader_Test.cpp  Framebuffer_Test.cpp  Skybox_Test.cpp  Texture2D_Test.cpp
app/tests/: heatmap.py  image_quality_comparisons.ipynb  performance_comparisons.ipynb  plot_utils.py  sdf_call_count_compatisons.ipynb
docs/: Camera_class_diagram.puml  Framebuffer_class_diagram.puml  Skybox_class_diagram.puml  classdiagram.puml  dev_docs.tex  elteikthesis.bib  elteikthesis.cls  intro.tex  summary.tex  testing.tex  theory.tex  thesis.tex  usecase.puml  user_docs.tex
docs/geogebra/cone_tracing/: cone_tracing_11.ggb  cone_tracing_3.ggb
docs/geogebra/kepernyo/: kepernyo_2.ggb  kepernyo_4.ggb
docs/geogebra/sphere_tracing/: sphere_tracing_0.ggb
docs/plantuml/: App_class_diagram.puml  CameraManipulator_class_diagram.puml  Camera_class_diagram.puml  CompShader_class_diagram.puml  Framebuffer_class_diagram.puml  Texture2D_class_diagram.puml  classdiagram.puml
geogebra/cone_tracing/: cone_tracing_0.ggb  cone_tracing_1.ggb  cone_tracing_14.ggb  cone_tracing_15.ggb  cone_tracing_4.ggb  cone_tracing_5.ggb  cone_tracing_8.ggb  geogebra-export(10).ggb  geogebra-export(12).ggb  geogebra-export(13).ggb  geogebra-export(2).ggb  geogebra-export(6).ggb  geogebra-export(7).ggb  geogebra-export(9).ggb
geogebra/cone_tracing_3D/: cone_tracing_3D_0.ggb  cone_tracing_3D_1.ggb  cone_tracing_3D_2.ggb  cone_tracing_3D_3.ggb  cone_tracing_3D_4.ggb
geogebra/kepernyo/: geogebra-export(1).ggb  geogebra-export.ggb  kepernyo_3.ggb
geogebra/kepernyo_full/: geogebra-export(3).ggb  geogebra-export.ggb  kepernyo_full_1.ggb  kepernyo_full_2.ggb
scripts/: copy_benchmark_files.sh  run.sh  setup.sh  test.sh
subprojects/imgui_bindings/: meson.build
